# ncrypt

./: .gitignore  Cargo.toml  README.md  build-targets.sh
src/: functions.rs  main.rs
src/functions/: crypt_file_header.rs  pem_files.rs
