[package]
name = "ncrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
argon2 = "0.5.3"
base64 = "0.22.1"
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.21", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["alloc", "pkcs8", "rand_core", "zeroize", "pem"] }
indicatif = "0.17.9"
rand = "0.8.5"
rpassword = "7.3.1"
snap = "1.1.1"
zeroize = "1.8.1"